Implement a first fit memory allocator.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ add_link_options(
 
 add_subdirectory(docs)
 add_subdirectory(malloc)
+add_subdirectory(src)
 
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     option(PACKAGE_TESTS "build unit tests" OFF)
