--- a/malloc/CMakeLists.txt
+++ b/malloc/CMakeLists.txt
@@ -6,6 +6,10 @@ target_sources(${CMAKE_PROJECT_NAME}
     PRIVATE malloc.cc
 )
 
+target_link_libraries(${CMAKE_PROJECT_NAME}
+    PRIVATE mem_alloc
+)
+
 install(TARGETS ${CMAKE_PROJECT_NAME}
     RUNTIME DESTINATION ${MALLOC_BIN_DIR}
 )
