Unit test the allocator.

--- a/tests/mem_alloc/CMakeLists.txt
+++ b/tests/mem_alloc/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.27)
 
-set(TESTNAME malloc_test)
+set(TESTNAME mem_alloc_test)
 
 add_executable(${TESTNAME} ${TESTNAME}.cc)
 
 target_link_libraries(${TESTNAME}
-    PRIVATE
-        gtest_main
+    PRIVATE gtest_main
+    PRIVATE mem_alloc
 )
 
 gtest_discover_tests(${TESTNAME}
-        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests
 )
 
 set_target_properties(${TESTNAME}
