Remove the temporary program driver and rename the allocator mem::Malloc.
The unit tests demo the functionality such that the program driver is
unecessary.

--- a/malloc/CMakeLists.txt
+++ b/malloc/CMakeLists.txt
@@ -1,15 +1,7 @@
 cmake_minimum_required(VERSION 3.27)
 
-add_executable(${CMAKE_PROJECT_NAME})
+add_library(${CMAKE_PROJECT_NAME} INTERFACE)
 
-target_sources(${CMAKE_PROJECT_NAME}
-    PRIVATE malloc.cc
-)
-
-target_link_libraries(${CMAKE_PROJECT_NAME}
-    PRIVATE mem_alloc
-)
-
-install(TARGETS ${CMAKE_PROJECT_NAME}
-    RUNTIME DESTINATION ${MALLOC_BIN_DIR}
+target_include_directories(${CMAKE_PROJECT_NAME}
+    INTERFACE ${MALLOC_INCLUDE_DIR}
 )
