--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -5,7 +5,7 @@
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = "malloc"
 PROJECT_NUMBER         =
-PROJECT_BRIEF          = "a basic linux implementation of malloc"
+PROJECT_BRIEF          = "a linux implementation of a memory allocator"
 OUTPUT_DIRECTORY       = @CMAKE_CURRENT_SOURCE_DIR@/malloc/
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
